--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@ body{
 <script>
 /* ===== ẢNH (4–5 tấm) ===== */
 const images = [
-    "https://via.placeholder.com/250x320",
-    "https://via.placeholder.com/260x330",
-    "https://via.placeholder.com/240x310",
-    "https://via.placeholder.com/255x325",
-    "https://via.placeholder.com/245x315"
+    "love.jpg",
+   "love1.jpg",
+   "love.jpg",
+   "love1.jpg",
+    "love.jpg",
+   "love1.jpg"
 ];
 
 /* ===== CHỮ ===== */
@@ -114,3 +115,4 @@ setInterval(createImage, 7000);  // ảnh ít & chậm
 
 </body>
 </html>
+
