--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@ body{
 <script>
 /* ===== ẢNH (4–5 tấm) ===== */
 const images = [
-    "love/love.jpg",
-   "love/love1.jpg",
-   "love/love.jpg",
-   "love/love1.jpg",
-    "love/love.jpg",
-   "love/love1.jpg"
+    "love.jpg",
+   "love1.jpg",
+   "love.jpg",
+   "love1.jpg",
+    "love.jpg",
+   "love1.jpg"
 ];
 
 /* ===== CHỮ ===== */
@@ -115,5 +115,6 @@ setInterval(createImage, 7000);  // ảnh ít & chậm
 
 </body>
 </html>
+
 
 
