--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ body{
 <script>
 /* ===== ẢNH (4–5 tấm) ===== */
 const images = [
-    "love.jpg",
+    "love2.jpg",
    "love1.jpg",
-   "love.jpg",
+   "love2.jpg",
    "love1.jpg",
-    "love.jpg",
+    "love2.jpg",
    "love1.jpg"
 ];
 
@@ -115,6 +115,7 @@ setInterval(createImage, 7000);  // ảnh ít & chậm
 
 </body>
 </html>
+
 
 
 
