--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Gửi Bé Yêu</title>
+<title>Gửi Bạn Châm xinh gái</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand&display=swap" rel="stylesheet">
 
@@ -36,7 +36,7 @@ body{
 .text-fall{
     position:absolute;
     font-family:'Dancing Script', cursive;
-    font-size:2rem;
+    font-size:4rem;
     color:#ffb6c1;
     text-shadow:0 0 15px #ff1493;
     white-space:nowrap;
@@ -66,16 +66,16 @@ const images = [
 
 /* ===== CHỮ ===== */
 const texts = [
-    "Yêu em nhất ❤️",
-    "Công chúa của anh",
-    "Mãi bên nhau nhé",
-    "Thương em rất nhiều",
-    "Only you",
-    "Cảm ơn em đã đến",
-    "Luôn ở bên anh nhé",
-    "Chúc mừng sinh nhật",
-    "Nhớ em nhiều lắm",
-    "My love ❤️"
+    "Chúc mừng sinh nhật nha 🎂 Mong là hôm nay bạn sẽ có thật nhiều niềm vui và cười thật nhiều 😊",
+    "Sinh nhật vui vẻ nhé! Chúc bạn luôn gặp những điều tốt đẹp như chính bạn vậy đó",
+    "Happy Birthday! Chúc bạn tuổi mới luôn khỏe mạnh và làm được những điều mình thích 🎉",
+    "Sinh nhật vui vẻ nhé! Chúc bạn luôn gặp những điều tốt đẹp như chính bạn vậy đó ✨",
+    "Sinh nhật vui vẻ nha 🎂",
+    "Happy Birthday 🎉 Chúc bạn một ngày thật trọn vẹn 💕",
+    "Chúc mừng sinh nhật! Mong là bạn sẽ luôn vui 😊",
+    "Happy Birthday! Chúc bạn tuổi mới luôn khỏe mạnh và làm được những điều mình thích 🎉",
+    "Happy Birthday 🎉 Chúc bạn tuổi mới vẫn đáng yêu như vậy nha (hoặc là hơn 😌",
+    "Sinh nhật vui vẻ nha 🎂"
 ];
 
 let imgIndex = 0;
@@ -115,6 +115,7 @@ setInterval(createImage, 7000);  // ảnh ít & chậm
 
 </body>
 </html>
+
 
 
 
