--- a/index.html
+++ b/index.html
@@ -58,10 +58,18 @@ body{
 const images = [
     "love2.jpg",
    "love1.jpg",
-   "love2.jpg",
-   "love1.jpg",
-    "love2.jpg",
-   "love1.jpg"
+   "cham1.jpg",
+  "cham2.jpg",
+    "cham3.jpg",
+   "cham4.jpg",
+    "cham5.jpg",
+    "cham6.jpg",
+    "cham7.jpg",
+    "cham8.jpg",
+    "cham9.jpg",
+    "cham10.jpg"
+ 
+    
 ];
 
 /* ===== CHỮ ===== */
@@ -115,6 +123,7 @@ setInterval(createImage, 7000);  // ảnh ít & chậm
 
 </body>
 </html>
+
 
 
 
