--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@ const images = [
 
 /* ===== CHỮ ===== */
 const texts = [
-    "Chúc mừng sinh nhật nha 🎂 Mong là hôm nay bạn sẽ có thật nhiều niềm vui và cười thật nhiều 😊",
-    "Sinh nhật vui vẻ nhé! Chúc bạn luôn gặp những điều tốt đẹp như chính bạn vậy đó ✨",
-    "Happy Birthday! Chúc bạn tuổi mới luôn khỏe mạnh và làm được những điều mình thích 🎉",
+    "Chúc mừng sinh nhật nha 🎂 ",
+    "Mong là hôm nay bạn sẽ có thật nhiều niềm vui và cười thật nhiều 😊",
+    "Chúc bạn luôn gặp những điều tốt đẹp như chính bạn vậy đó ✨",
+    "Chúc bạn tuổi mới luôn khỏe mạnh và làm được những điều mình thích 🎉",
     "Sinh nhật vui vẻ nha 🎂",
-    "Happy Birthday 🎉 Chúc bạn một ngày thật trọn vẹn 💕",
-    "Chúc mừng sinh nhật! Mong là bạn sẽ luôn vui 😊",
-    "Happy Birthday 🎉 Chúc bạn tuổi mới vẫn đáng yêu như vậy nha (hoặc là hơn 😌)"
+    "Chúc bạn một ngày thật trọn vẹn 💕",
+    "Mong là bạn sẽ luôn vui 😊",
+    "Chúc bạn tuổi mới vẫn đáng yêu như vậy nha (hoặc là hơn 😌)"
 ];
 
 let imgIndex = 0;
@@ -139,3 +140,4 @@ setInterval(createImage, 3500); // ảnh nhanh hơn
 
 </body>
 </html>
+
