--- a/index.html
+++ b/index.html
@@ -1,115 +1,138 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<title>Gửi Bạn Châm xinh gái</title>
+    <meta charset="UTF-8">
+    <title>Gửi Bạn Châm xinh gái</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand&display=swap" rel="stylesheet">
 
-<style>
-body{
-    margin:0;
-    overflow:hidden;
-    background:#000;
-    font-family:'Quicksand', sans-serif;
-}
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: #000;
+            font-family: 'Quicksand', sans-serif;
+        }
 
-/* ===== ẢNH ===== */
-.flying-img{
-    position:absolute;
-    width:180px;
-    height:230px;
-    object-fit:cover;
-    border-radius:20px;
-    border:3px solid rgba(255,182,193,.6);
-    box-shadow:0 0 25px rgba(255,20,147,.5);
-    animation: imgFloat linear forwards;
-    z-index:1;
-}
+        /* ===== ẢNH ===== */
+        .flying-img {
+            position: absolute;
+            width: 180px;
+            height: 230px;
+            object-fit: cover;
+            border-radius: 20px;
+            border: 3px solid rgba(255, 182, 193, 0.6);
+            box-shadow: 0 0 25px rgba(255, 20, 147, 0.5);
+            animation: imgFloat linear forwards;
+        }
 
-@keyframes imgFloat{
-    from{transform:translateY(110vh) scale(.9);opacity:0;}
-    15%{opacity:1;}
-    to{transform:translateY(-30vh) scale(1.05);opacity:0;}
-}
+        @keyframes imgFloat {
+            from {
+                transform: translateY(110vh) scale(0.9);
+                opacity: 0;
+            }
+            15% {
+                opacity: 1;
+            }
+            to {
+                transform: translateY(-30vh) scale(1.05);
+                opacity: 0;
+            }
+        }
 
-/* ===== CHỮ ===== */
-.text-fall{
-    position:absolute;
-    font-family:'Dancing Script', cursive;
-    font-size:3.8rem;
-    color:#ffb6c1;
-    text-shadow:0 0 15px #ff1493;
-    white-space:nowrap;
-    animation: textFall linear forwards;
-    z-index:2;
-    text-align:left;
-}
+        /* ===== CHỮ ===== */
+        .text-fall {
+            position: absolute;
+            font-family: 'Dancing Script', cursive;
+            font-size: 4rem;
+            color: #ffb6c1;
+            text-shadow: 0 0 15px #ff1493;
+            white-space: nowrap;
+            animation: textFall linear forwards;
+        }
 
-@keyframes textFall{
-    from{transform:translateY(-20vh);opacity:0;}
-    20%{opacity:1;}
-    to{transform:translateY(120vh);opacity:0;}
-}
-</style>
+        @keyframes textFall {
+            from {
+                transform: translateY(-20vh);
+                opacity: 0;
+            }
+            20% {
+                opacity: 1;
+            }
+            to {
+                transform: translateY(120vh);
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
 
 <script>
-/* ===== ẢNH ===== */
-const images = [
-    "love2.jpg","love1.jpg",
-    "cham1.jpg","cham2.jpg","cham3.jpg","cham4.jpg",
-    "cham5.jpg","cham6.jpg","cham7.jpg","cham8.jpg",
-    "cham9.jpg","cham10.jpg"
-];
+    /* ===== DANH SÁCH ẢNH ===== */
+    const images = [
+        "love2.jpg", "love1.jpg",
+        "cham1.jpg", "cham2.jpg", "cham3.jpg",
+        "cham4.jpg", "cham5.jpg", "cham6.jpg",
+        "cham7.jpg", "cham8.jpg", "cham9.jpg", "cham10.jpg"
+    ];
 
-/* ===== CHỮ ===== */
-const texts = [
-    "Chúc mừng sinh nhật nha 🎂 Mong là hôm nay bạn sẽ có thật nhiều niềm vui và cười thật nhiều 😊",
-    "Sinh nhật vui vẻ nhé! Chúc bạn luôn gặp những điều tốt đẹp như chính bạn vậy đó ✨",
-    "Happy Birthday! Chúc bạn tuổi mới luôn khỏe mạnh và làm được những điều mình thích 🎉",
-    "Sinh nhật vui vẻ nha 🎂",
-    "Happy Birthday 🎉 Chúc bạn một ngày thật trọn vẹn 💕",
-    "Chúc mừng sinh nhật! Mong là bạn sẽ luôn vui 😊",
-    "Happy Birthday 🎉 Chúc bạn tuổi mới vẫn đáng yêu như vậy nha (hoặc là hơn 😌)"
-];
+    /* ===== DANH SÁCH CHỮ ===== */
+    const texts = [
+        "Chúc mừng sinh nhật nha 🎂 Mong là hôm nay bạn sẽ có thật nhiều niềm vui 😊",
+        "Sinh nhật vui vẻ nhé! Chúc bạn luôn gặp điều tốt đẹp ✨",
+        "Happy Birthday 🎉 Chúc bạn luôn khỏe mạnh",
+        "Mong là bạn sẽ luôn cười nhiều như hôm nay 😊",
+        "Tuổi mới thật nhiều may mắn nha 💕",
+        "Sinh nhật vui vẻ nha 🎂",
+        "Happy Birthday 🎉 Một ngày thật trọn vẹn nhé",
+    ];
 
-/* ===== LÀN CHỮ ===== */
-const textLanes = [5, 25, 45, 65];
-let laneIndex = 0;
+    let imgIndex = 0;
+    let textRow = 0;               // đếm dòng chữ
+    const lineHeight = 80;         // khoảng cách giữa các dòng
 
-/* ===== TẠO CHỮ ===== */
-function createText(){
-    const text = document.createElement("div");
-    text.className = "text-fall";
-    text.innerText = texts[Math.floor(Math.random()*texts.length)];
+    /* ===== TẠO ẢNH ===== */
+    function createImage() {
+        if (imgIndex >= images.length) return;
 
-    text.style.left = textLanes[laneIndex] + "vw";
-    text.style.animationDuration = "18s";
+        const img = document.createElement("img");
+        img.className = "flying-img";
+        img.src = images[imgIndex++];
+        img.style.left = Math.random() * 70 + "vw";
+        img.style.animationDuration = "28s";
 
-    laneIndex = (laneIndex + 1) % textLanes.length;
+        document.body.appendChild(img);
+        setTimeout(() => img.remove(), 28000);
+    }
 
-    document.body.appendChild(text);
-    setTimeout(()=>text.remove(),18000);
-}
+    /* ===== TẠO CHỮ – KHÔNG ĐÈ NHAU ===== */
+    function createText() {
+        const text = document.createElement("div");
+        text.className = "text-fall";
+        text.innerText = texts[Math.floor(Math.random() * texts.length)];
 
-/* ===== TẠO ẢNH (VÔ HẠN) ===== */
-function createImage(){
-    const img = document.createElement("img");
-    img.className = "flying-img";
-    img.src = images[Math.floor(Math.random()*images.length)];
-    img.style.left = Math.random()*60 + 10 + "vw";
-    img.style.animationDuration = "16s";
+        text.style.left = "40px";               // căn lề trái
+        text.style.top = (textRow * lineHeight) + "px";
+        text.style.animationDuration = "16s";
 
-    document.body.appendChild(img);
-    setTimeout(()=>img.remove(),16000);
-}
+        document.body.appendChild(text);
 
-/* ===== GỌI ===== */
-setInterval(createText, 1200);   // chữ đều, không hết
-setInterval(createImage, 2500); // ảnh bay liên tục
+        setTimeout(() => text.remove(), 16000);
+
+        textRow++;
+
+        // Nếu chữ xuống quá màn hình thì reset lên đầu
+        if (textRow * lineHeight > window.innerHeight - 100) {
+            textRow = 0;
+        }
+    }
+
+    /* ===== CHẠY ===== */
+    setInterval(createText, 1200);   // chữ ra từng dòng
+    setInterval(createImage, 5000);  // ảnh bay chậm
 </script>
 
 </body>
